# evmbench

./: .editorconfig  .gitignore  Makefile  README.md  SECURITY.md
backend/: .dockerignore  .env.example  .env.production  .gitignore  Caddyfile  README.md  alembic.ini  compose.dev.yml  compose.production.yml  compose.yml  mock.sql  pyproject.toml
backend/api/: __main__.py  app.py
backend/api/auth/: __init__.py  abc.py  github.py
backend/api/core/: config.py  const.py  contract_analysis.py  database.py  deps.py  impl.py  rabbitmq.py  tokens.py
backend/api/models/: job.py
backend/api/schemas/: auth.py  contract_analysis.py  integration.py  job.py
backend/api/secrets/: __init__.py  abc.py  http.py  impl.py
backend/api/util/: aes_gcm.py  fs.py  logger.py  secrets_bundle.py  zip_validate.py
backend/docker/backend/: Dockerfile
backend/docker/base/: Dockerfile
backend/docker/worker/: Dockerfile  init.py
backend/instancer/: __main__.py
backend/instancer/backends/: __init__.py  abc.py  docker.py  k8s.py
backend/instancer/core/: config.py  consumer.py  impl.py  job_status.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_01_15_19_53-37d1b21b49b6_add_jobs.py  2026_01_17_02_49-2f3e04b88a43_add_reports.py  2026_01_19_15_14-d29c31a0ef97_add_model_file_name.py  (+3 more)
backend/oai_proxy/: __init__.py  __main__.py
backend/prunner/: __main__.py
backend/prunner/core/: db.py  (+3 more)
backend/resultsvc/: __init__.py  __main__.py
backend/secretsvc/: __init__.py  __main__.py
backend/worker_runner/: README.md  detect.md  model_map.json  run_codex_detect.sh
(+133 files in other folders)
